--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-01_OUTPUT\swirl2.py
-D:\ALGORITHM\01_OUTPUT\swirl3.py
-01_OUTPUT\swirl4.py
+01_OUTPUT/swirl2.py
+01_OUTPUT/swirl3.py
+01_OUTPUT/swirl4.py
+01_OUTPUT/swirl5.py
+01_OUTPUT/testSwirl.py
